修改了皮卡丘手机端左右不一致的问题

--- a/src/style.css
+++ b/src/style.css
@@ -88,31 +88,28 @@ body {
 }
 .mouth .up {
   position: relative;
-  top: -10px;
+  top: -20px;
+  z-index: 1;
 }
 .mouth .up .lip {
   border: 3px solid black;
   height: 30px;
   width: 100px;
+  background: #ffe600;
   border-top-color: transparent;
   border-right-color: transparent;
+  position: relative;
   position: absolute;
   left: 50%;
-  z-index: 1;
-  background: #ffe600;
+  margin-left: -50px;
 }
 .mouth .up .lip.left {
   border-radius: 0 0 0 50px;
-
-  transform: rotate(-20deg);
-
-  margin-left: -100px;
+  transform: rotate(-15deg) translateX(-53px);
 }
 .mouth .up .lip.right {
-  border-radius: 0 0 50px 0;
-
-  transform: rotate(20deg);
-  margin-left: 2px;
+  border-radius: 0 0 50px 0px;
+  transform: rotate(15deg) translateX(53px);
 }
 .mouth .up .lip::before {
   content: "";
@@ -126,7 +123,6 @@ body {
 .mouth .up .lip.left::before {
   right: -6px;
 }
-
 .mouth .up .lip.right::before {
   left: -6px;
 }
